# blast-my-haskell

./: .gitignore  GhcCoreToLean.lean  Main.lean  README.md  lake-manifest.json  lakefile.toml  transpile.sh
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: lean_action_ci.yml
GhcCoreToLean/: AST.lean  Emit.lean  Lower.lean  Maps.lean  Parse.lean
GhcCoreToLean/Spike/: Fib.lean  FibComplexFromShim.lean  FibEmitted.lean  FibFromShim.lean  PipelineTest.lean
GhcCoreToLean/Tests/: Unit.lean
docs/superpowers/plans/: 2026-06-08-lean-spec-quasiquoter.md  2026-06-15-lean-comment-plugin-and-ux.md  2026-06-18-base-coverage-tiers-1-2.md  2026-06-18-devcontainer-and-env-check.md  2026-06-18-typeclasses-and-instances.md  2026-06-20-user-classes-dictionaries.md
docs/superpowers/specs/: 2026-06-08-lean-spec-quasiquoter-design.md  2026-06-15-lean-comment-plugin-and-ux-design.md  2026-06-18-devcontainer-and-env-check-design.md  2026-06-20-user-classes-dictionaries-design.md
examples/: FibComplex.hs
examples/haskell/: Arithmetic.hs  CaseBinder.hs  Fib.hs  FibComplex.hs  ListBasics.hs  LocalRec.hs  NumOrd.hs  OperatorCommons.hs  OrdInstance.hs  PartialHead.hs  PreludeNames.hs  Ratio.hs  TupleBasics.hs  UserClass.hs
examples/haskell/RatioSpec/: MaxMinOverArithmetics.hs
plans/: ghc-core-to-lean4-transpiler.md
scripts/: transpile_graph.py
shim/: Main.hs  shim.cabal
shim/decl-plugin/: GhcDeclDump.hs  decl-plugin.cabal
shim/lean-spec/: lean-spec.cabal
shim/lean-spec/src/Lean/: Spec.hs
shim/spec-plugin/: GhcSpecDump.hs  cabal.project  spec-plugin.cabal
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
